# hajimi-code-cli

./: .c8rc.json  .gitignore  .mcp.json  .npmrc  AGENTS.md  ARCHITECTURE-ONNX-INTEGRATION.md  Cargo.toml  D-CRISIS-RESOLUTION.md  DEBT-LINES-B33-01.md  DIRECTORY-INDEX.md  LICENSE  PRE-VALIDATION-LOG.txt  PROJECT-STRUCTURE-INDEX.md  README-PHASE5-FINAL.md  README.md  RELEASE-NOTES-v3.8.0.md  ROLLUP-ID59-CLUSTER-CLEARANCE.md  ROLLUP-README-HARDEN-001.md  ROLLUP-v3.5.0-final.md  SYNC-001-白皮书-v1.0.md  SYNC-001-自测表-v1.0.md  SYNC-FILE-CHECKLIST.md  SYNC-SHA-VERIFICATION.md  TEST-LOG-29-validation.txt  TEST-LOG-31-01-sh-fix.txt  TEST-LOG-31-02-datachannel.txt  TEST-LOG-33-01-real-network.txt  TEST-LOG-33-02-crypto.txt  TEST-LOG-B-08-week8.txt  TEST-LOG-B-09-week9.txt  TEST-LOG-CH-01-10-cargo-build.txt  TEST-LOG-CH-02-10-cargo-build.txt  TEST-LOG-CH-03-10-cargo-build.txt  TEST-LOG-CH-04-10-cargo-build.txt  TEST-LOG-CH-05-10-cargo-build.txt  TEST-LOG-CH-06-10-cargo-build.txt  TEST-LOG-CH-07-10-cargo-check.txt  TEST-LOG-CH-08-10-cargo-check.txt  TEST-LOG-p0-week1.txt  TEST-LOG-perf-w29.md  (+19 more)
attic/deprecated/hnsw-week35/: Cargo.toml
chimera/chimera-repl/: Cargo.toml
chimera/chimera-repl/src/: archive_writer.rs  clock.rs  codex_bridge.rs  engine.rs  event.rs  lib.rs  repl.rs  session.rs  state.rs  traits.rs
crates/evm-bench-adapter/: Cargo.toml
crates/evm-bench-adapter/src/: runner.rs  types.rs
crates/hajimi-codex-twist/: COUNT-MANIFEST-v1.1.md  Cargo.toml  TEST-LOG-240-NPM-TEST.txt
crates/hajimi-codex-twist/src/: thread.rs  turn.rs
crates/hajimi-codex-twist/src/memory/: focus_memory.rs  mod.rs  working_memory.rs
crates/hajimi-codex-twist/src/tiered/: cold_tier.rs  tiered_storage.rs
crates/hajimi-hnsw/: Cargo.toml
crates/hajimi-hnsw/pkg/: hajimi_hnsw.d.ts  hajimi_hnsw.js  hajimi_hnsw_bg.wasm  package.json
crates/hajimi-hnsw/src/: lib.rs
crates/hajimi-pgvector/: Cargo.toml
crates/hajimi-pgvector/src/: index.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/crates/hajimi-core/: Cargo.toml  Makefile  check_output.txt  clippy.toml  debt-check.ps1
src/crates/hajimi-core/benches/: batch_bench.rs  query_engine.rs
src/crates/hajimi-core/src/: error.rs  lib.rs  query.rs  retry.rs
src/crates/hajimi-core/tests/: anthropic_test.rs  backpressure_test.rs  channel_stream_test.rs  concurrent_stress_test.rs  e2e_core_workflows.rs  e2e_edge_cases.rs  e2e_permission_system.rs  ollama_test.rs  openai_test.rs  parallel_executor_test.rs  retry_test.rs  serial_executor_test.rs  sse_test.rs  stress_concurrent_1000.rs  test_find_combined.rs  test_glob_performance.rs  test_list_directory_deep.rs  test_read_file_large.rs  test_write_file_atomic.rs  tool_registry_integration_test.rs  w03_debt_verification_test.rs  week1_integration_test.rs  week2_integration_test.rs
src/engine/llm-core/: Cargo.toml
src/engine/llm-core/src/: anthropic.rs  error.rs  mod.rs  ollama.rs  openai.rs  token_tests.rs
src/engine/p2p-sync/: Cargo.toml
src/engine/p2p-sync/src/: config.js  dvv-manager.ts  fallback-strategy.md  ice-v2-client-rfc.ts  lib.rs  progress-bar.ts  signaling-interface.ts  signaling-server.js  snapshot-strategy.ts  sync-engine.ts  yjs-adapter.ts
src/engine/search/: Cargo.toml  README.md  tantivy_query.rs  vector_text_hybrid.rs
src/engine/search/src/: debug_test.rs  lib.rs  tantivy_index.rs  tantivy_query.rs  vector_text_hybrid.rs
src/engine/tool-system/: Cargo.toml  README.md
src/engine/tool-system/src/: analyze.rs  ast_provider.rs  build.rs  directory.rs  docs.rs  download.rs  edit.rs  error.rs  find.rs  fs.rs  git.rs  graph.rs  grep.rs  image_view.rs  js_bundle_analyzer.rs  lsp.rs  lsp_integration.rs  mcp.rs  mod.rs  multi_edit.rs  network.rs  parse.rs  patch.rs  registry.rs  rust_doc_generator.rs  security.rs  shell.rs  test.rs
src/engine/worker/: Cargo.toml
src/engine/worker/src/: error.rs  mod.rs  parallel.rs  query.rs  serial.rs
src/foundation/eventloop/: Cargo.toml  README.md
src/foundation/eventloop/src/: lib.rs
src/foundation/wasm/: Cargo.toml  sab-allocator-fixed.ts  sab-allocator.ts
src/foundation/wasm/src/: code_index.rs  lib.rs  memory.rs
src/intelligence/agent-core/: Cargo.toml  README.md  act_dto.rs  act_executor.rs  agent_loop.rs  agent_loop_builder.rs  agent_loop_tests.rs  blackboard.rs  checkpoint.rs  context_budget.rs  context_probe.rs  context_receipt.rs  context_window_manager.rs  degrade.rs  edit_applier.rs  event_tracing.rs  events.rs  governance.rs  lib.rs  long_context_pack.rs  loop_state_machine.rs  memory_bootstrapper.rs  memory_retriever.rs  mod.rs  multi_worker_aggregator.rs  orchestrator.rs  plan_optimizer.rs  planner.rs  planner_dto.rs  ports.rs  prompt_golden_tests.rs  reflection_persistence.rs  reflector.rs  reflector_dto.rs  resource_monitor.rs  swarm.rs  swarm_delegate.rs  tool_manifest.rs  tools.rs  worker_lifecycle_manager.rs  (+1 more)
src/intelligence/agent-core/events/: tests.rs
src/intelligence/agent-core/examples/: minimal_agent.rs
src/intelligence/agent-core/llm/: bridge.rs  mod.rs
src/intelligence/agent-core/prompts/: agent_persona.md  mod.rs  summary_prompt.md
src/intelligence/agent-core/reflector/: tests.rs
src/intelligence/agent-core/swarm/: tests.rs
src/intelligence/agent-core/tests/: agent_core_e2e.rs  agent_loop_leak_test.rs  ast_context_test.rs  autonomous_goal_test.rs  checkpoint_enhanced_test.rs  edit_applier_test.rs  editing_e2e.rs  governance_control_test.rs  integration.rs  integration_phase3_test.rs  memory_bootstrapper_e2e.rs  memory_sync_e2e.rs  reflection_persistence_test.rs  (+4 more)
src/intelligence/codex-twist/: COUNT-MANIFEST.md  Cargo.toml  k1.zst
src/intelligence/knowledge/: Cargo.toml
src/intelligence/memory/: Cargo.toml  README.md  cloud.rs  graph_query.rs  mod.rs
src/intelligence/pgvector/: Cargo.toml
src/intelligence/typeracing/: Cargo.toml
src/interface/desktop/: Cargo.toml  README.md  tauri.conf.json
src/interface/terminal/: Cargo.toml
src/ws_server/: Cargo.toml
src/ws_server/src/: handlers.rs  lib.rs  protocol.rs
src/ws_server/tests/: type_verification.rs
(+1313 files in other folders)
