[workspace]
members = [
    "crates/evm-bench-adapter",
    "src/engine/llm-core",
    "src/engine/p2p-sync",
    "src/engine/tool-system",
    "src/engine/worker",
    "src/foundation/network",
    "src/intelligence/codex-twist",
    "src/intelligence/memory",
    "src/intelligence/pgvector",
    "src/interface/terminal"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hajimi Team"]
license = "MIT"
repository = "https://github.com/hajimi/evm-bench-adapter"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# pgvector 集成（Week 40 Buy 策略）
prax-pgvector = { version = "0.5.2", features = ["sqlx"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
# 注意：显式 napi 依赖已移除，使用 prax-pgvector 内嵌版本

[profile.release]
opt-level = 3
lto = true
