[workspace]
members = [
    "src/foundation/hash",
    "src/engine/llm-core",
    "src/engine/tool-system",
    "src/engine/worker",
    "src/foundation/eventloop",
    "src/foundation/network",
    "src/foundation/wasm",
    "src/intelligence/chimera/chimera-repl",
    "src/intelligence/codex-twist",
    "src/intelligence/memory",
    "src/intelligence/pgvector",
    "src/intelligence/cloud",
    "src/intelligence/knowledge",
    "src/intelligence/agent-core",
    "src/engine/search",
    "src/integration",
    "src/interface/desktop"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hajimi Team"]
license = "Apache-2.0"
repository = "https://github.com/Cognitive-Architect/hajimi-code-cli"

[workspace.dependencies]
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.120"
tokio = { version = "=1.37.0", features = ["full"] }
tokio-stream = "=0.1.15"
chrono = { version = "=0.4.38", features = ["serde"] }
thiserror = "=1.0.64"
prax-pgvector = { version = "=0.5.2", features = ["sqlx"] }
sqlx = { version = "=0.8.3", default-features = false, features = ["runtime-tokio", "postgres"] }
rand = "=0.8.5"
uuid = { version = "=1.10.0", features = ["v4", "serde"] }
regex = "=1.12.3"
# 加密库，精确锁定防止 API 漂移
age = "=0.10"
argon2 = "=0.5.3"
zeroize = { version = "=1.8.1", features = ["zeroize_derive"] }
subtle = "=2.6.1"
futures = "=0.3.30"
# 数据库驱动，精确锁定防止 schema 变更
rusqlite = { version = "=0.30", features = ["bundled", "chrono"] }
jieba-rs = "=0.6.0"
# 密码哈希 KDF，安全关键，必须精确锁定
scrypt = "=0.11"
# ONNX 推理依赖，精确锁定防止数值行为变更
ndarray = "=0.15"
# ONNX Runtime rc 版本，必须精确锁定
ort = "=2.0.0-rc.12"
cfg-if = "=1.0.0"
dirs = "=5.0.1"
tempfile = "=3.14.0"
aho-corasick = "=1.1.3"
lru = "=0.12.5"
log = "=0.4.25"
fastembed = "=5.13.4"
hnsw_rs = "=0.3.4"
# scale-info locked to =2.11.6 for nightly compatibility (parity-scale-codec alignment)
# zstd-sys patched locally (src/patches/zstd-sys) to fix zstd-safe 6.x experimental API mismatch
# with zstd-sys 2.0.15+ (missing ZSTD_paramSwitch_e and ZSTD_c_experimentalParam6).
# See: tantivy-sstable 0.2.0 -> zstd 0.12.4 -> zstd-safe 6.0.5 + experimental feature.
scale-info = { version = "=2.11.6", features = ["derive", "std"] }
parity-scale-codec = { version = "=3.6.12", features = ["derive", "std"] }
[patch.crates-io]
zstd-sys = { path = "src/patches/zstd-sys" }

[profile.release]
opt-level = 3
lto = true
