[package]
name = "hajimi-desktop"
version = "0.1.0"
description = "Hajimi Desktop App"
authors = ["Hajimi Team"]
license = "MIT"
repository = "https://github.com/Cognitive-Architect/hajimi-code-cli"
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[workspace]

