[package]
name = "chimera-repl"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Chimera REPL engine - TUI-free command interaction"

[lib]
name = "chimera_repl"
path = "src/lib.rs"

[dependencies]
codex-protocol = { path = "../../codex-twist/codex-rs/protocol" }
codex-twist = { path = "../../crates/hajimi-codex-twist" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
