[package]
name = "codex-twist"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "轻量级Codex Thread/Turn架构移植，LCR本地存储适配"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
once_cell = "1.19"

# napi-rs FFI绑定 (可选特性)
napi = { version = "=2.0.0", features = ["full"], optional = true }
napi-derive = { version = "=2.0.0", optional = true }

# 固定兼容Rust 1.75的依赖
unicode-segmentation = "=1.10.1"
zstd = "0.13"
memmap2 = "0.9"
lru = "0.12"

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive"]

[build-dependencies]
napi-build = "=2.0.0"

[dev-dependencies]
tokio-test = "0.4"
