[package]
name = "hajimi-pgvector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL pgvector HNSW index wrapper"

[lib]
name = "pgvector"
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
pgvector = { version = "0.3", features = ["sqlx"] }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
