[package]
name = "hajimi-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["HAJIMI Team"]
description = "Core query engine for HAJIMI CLI"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
regex = "1.10"
urlencoding = "2.1"
toml = "0.8"
notify = "6.1"
fs2 = "0.4"
ratatui = "0.26"
crossterm = "0.27"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
petgraph = "0.6"
quick-xml = "0.36"
pulldown-cmark = "0.12"
lsp-types = "0.94"
once_cell = "1.19"
nix = { version = "0.29", features = ["signal", "process"] }
which = "6.0"
dirs = "5.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
chrono = { workspace = true }
image = "0.24"
base64 = "0.22"
rusqlite = { version = "0.30", features = ["bundled", "serde_json", "chrono"] }
bincode = "1.3"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.0"

[[bench]]
name = "batch_bench"
harness = false

[lib]
name = "hajimi_core"
path = "src/lib.rs"
