[package]
name = "engine-llm-core"
version = "0.1.0"
edition = "2021"
authors = ["HAJIMI Team"]
description = "LLM core engine for HAJIMI"
license.workspace = true

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream", "json"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio-stream = { workspace = true }
secrecy = "0.10"
[lib]
name = "engine_llm_core"
path = "src/mod.rs"
