[package]
name = "engine-p2p-sync"
version = "0.1.0"
edition = "2021"
authors = ["HAJIMI Team"]
description = "P2P and sync engine for HAJIMI"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "engine_p2p_sync"
path = "src/lib.rs"
