[package]
name = "engine-tool-system"
version = "0.1.0"
edition = "2021"
authors = ["HAJIMI Team"]
description = "Tool system engine for HAJIMI"
license.workspace = true

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
regex = "1.10"
tempfile = "3"
walkdir = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
tokio-stream = { workspace = true }
fs2 = "0.4"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
petgraph = "0.6"
quick-xml = "0.36"
pulldown-cmark = "0.12"
lsp-types = "0.94"
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4"] }
urlencoding = "2.1"
which = "6.0"
image = "0.24"
base64 = "0.22"

[lib]
name = "engine_tool_system"
path = "src/mod.rs"
