[package]
name = "engine-worker"
version = "0.1.0"
edition = "2021"
authors = ["HAJIMI Team"]
description = "Worker engine for HAJIMI"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"

[lib]
name = "engine_worker"
path = "src/mod.rs"
