[package]
name = "engine-worker"
version = "0.1.0"
edition = "2021"
authors = ["HAJIMI Team"]
description = "Worker engine for HAJIMI"
license.workspace = true

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"

# Internal: tool system for real tool execution
engine-tool-system = { path = "../tool-system" }

[lib]
name = "engine_worker"
path = "src/mod.rs"
