[package]
name = "intelligence-agent-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dirs = "5.0"

# Internal dependencies
chimera-repl = { path = "../chimera/chimera-repl" }
memory = { path = "../memory" }
engine-tool-system = { path = "../../engine/tool-system" }
engine-llm-core = { path = "../../engine/llm-core" }

[lib]
name = "agent_core"
path = "lib.rs"
