[package]
name = "codex-twist"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "轻量级Codex Thread/Turn架构移植，LCR本地存储适配"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
once_cell = "1.19"

# 固定兼容Rust 1.75的依赖
unicode-segmentation = "=1.11.0"
zstd = "0.13"
memmap2 = "0.9"
lru = "0.12"
engine-llm-core = { path = "../../engine/llm-core" }

[features]
default = []
napi = []

[dev-dependencies]
tokio-test = "0.4"
