[package]
name = "knowledge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ADR pattern extraction and knowledge graph indexing"

[lib]
name = "knowledge"
path = "src/lib.rs"

[dependencies]
foundation-hash = { path = "../../foundation/hash" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["time", "sync", "fs", "rt", "macros"] }
tempfile = "3.0"
regex = "1.10"
notify = "6.1"
clap = { version = "4.5", features = ["derive"] }
serde_yaml = "0.9"

rusqlite = { workspace = true }
bincode = "1.3"
anyhow = "1.0"

ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std"] }
ndarray = { version = "0.15", optional = true }

[features]
default = []
onnx = ["dep:ort", "dep:ndarray"]

[dev-dependencies]
tokio = { workspace = true }
