[package]
name = "memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory layer with Session/Auto/Dream/Graph modules"

[lib]
name = "memory"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "fs", "rt", "macros"] }
rusqlite = { workspace = true, features = ["bundled", "chrono"] }
rand = { workspace = true }
# ONNX Runtime依赖（可选feature）
ort = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
fastembed = { workspace = true, optional = true }
cfg-if = { workspace = true }

# Week 6-8: Cloud E2EE加密依赖 (B-07: scrypt fallback and degraded_mode removed - pure Argon2id only, DEBT-CRYPTO-004 for low-memory envs if needed)
age = { workspace = true, features = ["armor"] }
argon2 = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
aho-corasick = { workspace = true }
lru = { workspace = true }
jieba-rs = { workspace = true }

[features]
default = []
onnx = ["dep:ort", "dep:ndarray"]
semantic-memory = ["dep:fastembed"]

[dev-dependencies]
tokio = { workspace = true }
