[package]
name = "hajimi-pgvector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL pgvector HNSW index wrapper"

[lib]
name = "pgvector"
path = "src/lib.rs"

[dependencies]
sqlx = { workspace = true }
pgvector = { version = "0.4", features = ["sqlx"] }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
