[package]
name = "hajimi-desktop"
version = "0.1.0"
description = "Hajimi Desktop App"
authors = ["Hajimi Team"]
license = "Apache-2.0"
repository = "https://github.com/Cognitive-Architect/hajimi-code-cli"
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
engine-tool-system = { path = "../../engine/tool-system" }
engine-llm-core = { path = "../../engine/llm-core" }
codex-twist = { path = "../../intelligence/codex-twist" }
intelligence-agent-core = { path = "../../intelligence/agent-core" }
memory = { path = "../../intelligence/memory" }
tokio = { version = "1.37", features = ["full"] }
keyring = { version = "3", features = ["windows-native", "linux-native", "apple-native"] }
secrecy = "0.10"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
[features]
custom-protocol = ["tauri/custom-protocol"]

