[package]
name = "interface-terminal"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["HAJIMI Team"]
description = "Terminal UI interface for HAJIMI CLI"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1"
chrono = { workspace = true }
notify = "6.1"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[lib]
name = "interface_terminal"
path = "src/mod.rs"
